August_30/August_30/src/objects/Daily_Stats__c.object
<CustomObject>
    <fields>
        <fullName>Badges__c</fullName>
        <description>This field stores the number of badges the team member has till a particular day.</description>
        <label>Badges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>This field stores the date to which the stats belong.</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <description>This field stores the number of points the team member has till a particular day.</description>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Superbadges__c</fullName>
        <description>This field stores the number of superbadges the team member has till a particular day.</description>
        <label>Superbadges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trailhead_User__c</fullName>
        <description>This field is stores the reference to the master Trailhead user record.</description>
        <label>Trailhead User</label>
        <referenceTo>Trailhead_User__c</referenceTo>
        <relationshipLabel>Daily Stats</relationshipLabel>
        <relationshipName>Daily_Stats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Trails_Completed__c</fullName>
        <description>This field stores the number of trails the team member has completed till a particular day.</description>
        <label>Trails Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>This object stores the badges, points, trails, ranks of the trailhead user every day to obtain the progression of the team member over time. It has a Master-Detail relationship with the Trailhead User object.</description>
    <label>Daily Stats</label>
    <nameField>
        <displayFormat>S-{0000000000}</displayFormat>
        <label>Daily Stats Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Stats</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>